2021/06/17
Added functionality to import RockMaker XML files. Therefore, one can import XML files downloaded from RockMaker website
or import custom screens performed with the SPTLabtech Dragonfly and exported to XML.

2021/05/20
Clicking a well in the Timeline spawns a new viewing window.
Added the option to class as "Unknown" in the drop score section.

2021/03/11:
Default folder tree has one more folder (see case 2 in INSTALL.txt).
If the local tree does not have this folder, use the following command at install "python3 Setup.py --no-ProjectID".
Also, if the local folder containing the unmerged Z-stacks is not called "rawimages", edit the parameter "_rawimages" in utils.py before installation.

2021/03/05:
By default AMi_Image_Analysis expects the individual Z focus images to be located in a folder "rawimages". As of 2021/03/05, a parameter named "_rawimages" can be modified in utils.py before installation. 

2020/12/04:
Changed parallel processing. Defined MAX\_CPU in Merge\_Zstack.py, Merge\_AllNewPlates.py and preferences.py. Value can be set to limit number of processes if for example, RAM is completely used leading to the use of swap memory.

2020/09/22:
Two new command line tools: Merge_AllNewPlates.py and SaveDiskSpace.py to automate the tedious processing of several datasets or save disk space.
Release 1.2.3.7

2020/07/03:
Easier installation procedure using Setup.py. Creation of an uninstallation script.
Release 1.2.3.1

2020/05/20:
Improved navigation with shortcuts: Now only visible wells through "Filter" option are selected.
Added Screens Tables to quickly check crystallization conditions. Crystallization Tables are read from csv files stored in the folder "Screen_Database".

2020/03/03:
Merging Z-stacks can be done within AMI_Image_Analysis or command line using the script Merge_Zstack.py. It is done in python using openCV and is much faster than using Hugin.

2020/02/03: