@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 
-# Form implementation generated from reading ui file 'DesignerFiles/mainwindow_test.ui'
+# Form implementation generated from reading ui file 'DesignerFiles/mainwindow_test_subwells_2.ui'
 #
 # Created by: PyQt5 UI code generator 5.12.1
 #
@@ -68,7 +68,7 @@ class Ui_MainWindow(object):
         self.gridLayout_3.addWidget(self.label_NDays, 3, 3, 1, 1)
         self.gridLayout.addLayout(self.gridLayout_3, 1, 0, 1, 1)
         self.scrollAreaPlate = QtWidgets.QScrollArea(self.gridLayoutWidget)
-        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Expanding)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Minimum, QtWidgets.QSizePolicy.Expanding)
         sizePolicy.setHorizontalStretch(0)
         sizePolicy.setVerticalStretch(0)
         sizePolicy.setHeightForWidth(self.scrollAreaPlate.sizePolicy().hasHeightForWidth())
@@ -79,90 +79,10 @@ class Ui_MainWindow(object):
         self.scrollAreaPlate.setWidgetResizable(True)
         self.scrollAreaPlate.setObjectName("scrollAreaPlate")
         self.scrollAreaPlateContent = QtWidgets.QWidget()
-        self.scrollAreaPlateContent.setGeometry(QtCore.QRect(0, 0, 665, 403))
+        self.scrollAreaPlateContent.setGeometry(QtCore.QRect(0, 0, 646, 373))
         self.scrollAreaPlateContent.setObjectName("scrollAreaPlateContent")
         self.scrollAreaPlate.setWidget(self.scrollAreaPlateContent)
         self.gridLayout.addWidget(self.scrollAreaPlate, 3, 0, 1, 1)
-        self.FilterBox = QtWidgets.QGroupBox(self.gridLayoutWidget)
-        self.FilterBox.setEnabled(True)
-        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Fixed, QtWidgets.QSizePolicy.Fixed)
-        sizePolicy.setHorizontalStretch(0)
-        sizePolicy.setVerticalStretch(0)
-        sizePolicy.setHeightForWidth(self.FilterBox.sizePolicy().hasHeightForWidth())
-        self.FilterBox.setSizePolicy(sizePolicy)
-        self.FilterBox.setMinimumSize(QtCore.QSize(635, 100))
-        self.FilterBox.setMaximumSize(QtCore.QSize(650, 100))
-        font = QtGui.QFont()
-        font.setBold(True)
-        font.setWeight(75)
-        self.FilterBox.setFont(font)
-        self.FilterBox.setAutoFillBackground(False)
-        self.FilterBox.setFlat(False)
-        self.FilterBox.setCheckable(False)
-        self.FilterBox.setObjectName("FilterBox")
-        self.layoutWidget = QtWidgets.QWidget(self.FilterBox)
-        self.layoutWidget.setGeometry(QtCore.QRect(12, 32, 615, 63))
-        self.layoutWidget.setObjectName("layoutWidget")
-        self.horizontalLayout_2 = QtWidgets.QHBoxLayout(self.layoutWidget)
-        self.horizontalLayout_2.setContentsMargins(0, 0, 0, 0)
-        self.horizontalLayout_2.setObjectName("horizontalLayout_2")
-        self.verticalLayout = QtWidgets.QVBoxLayout()
-        self.verticalLayout.setObjectName("verticalLayout")
-        self.radioButton_All = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_All.setChecked(True)
-        self.radioButton_All.setObjectName("radioButton_All")
-        self.verticalLayout.addWidget(self.radioButton_All)
-        self.radioButton_Crystal = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_Crystal.setObjectName("radioButton_Crystal")
-        self.verticalLayout.addWidget(self.radioButton_Crystal)
-        self.horizontalLayout_2.addLayout(self.verticalLayout)
-        self.verticalLayout_2 = QtWidgets.QVBoxLayout()
-        self.verticalLayout_2.setObjectName("verticalLayout_2")
-        self.radioButton_Clear = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_Clear.setObjectName("radioButton_Clear")
-        self.verticalLayout_2.addWidget(self.radioButton_Clear)
-        self.radioButton_Other = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_Other.setObjectName("radioButton_Other")
-        self.verticalLayout_2.addWidget(self.radioButton_Other)
-        self.horizontalLayout_2.addLayout(self.verticalLayout_2)
-        self.verticalLayout_3 = QtWidgets.QVBoxLayout()
-        self.verticalLayout_3.setObjectName("verticalLayout_3")
-        self.radioButton_Precipitate = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_Precipitate.setObjectName("radioButton_Precipitate")
-        self.verticalLayout_3.addWidget(self.radioButton_Precipitate)
-        self.radioButton_PhaseSep = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_PhaseSep.setObjectName("radioButton_PhaseSep")
-        self.verticalLayout_3.addWidget(self.radioButton_PhaseSep)
-        self.horizontalLayout_2.addLayout(self.verticalLayout_3)
-        self.verticalLayout_4 = QtWidgets.QVBoxLayout()
-        self.verticalLayout_4.setObjectName("verticalLayout_4")
-        self.radioButton_Unsorted = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_Unsorted.setObjectName("radioButton_Unsorted")
-        self.verticalLayout_4.addWidget(self.radioButton_Unsorted)
-        self.radioButton_HasNotes = QtWidgets.QRadioButton(self.layoutWidget)
-        self.radioButton_HasNotes.setObjectName("radioButton_HasNotes")
-        self.verticalLayout_4.addWidget(self.radioButton_HasNotes)
-        self.horizontalLayout_2.addLayout(self.verticalLayout_4)
-        self.labelVisuClassif = QtWidgets.QLabel(self.layoutWidget)
-        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Fixed, QtWidgets.QSizePolicy.Fixed)
-        sizePolicy.setHorizontalStretch(0)
-        sizePolicy.setVerticalStretch(0)
-        sizePolicy.setHeightForWidth(self.labelVisuClassif.sizePolicy().hasHeightForWidth())
-        self.labelVisuClassif.setSizePolicy(sizePolicy)
-        self.labelVisuClassif.setMinimumSize(QtCore.QSize(175, 50))
-        self.labelVisuClassif.setMaximumSize(QtCore.QSize(175, 50))
-        font = QtGui.QFont()
-        font.setPointSize(18)
-        font.setBold(True)
-        font.setWeight(75)
-        self.labelVisuClassif.setFont(font)
-        self.labelVisuClassif.setFrameShape(QtWidgets.QFrame.Box)
-        self.labelVisuClassif.setFrameShadow(QtWidgets.QFrame.Sunken)
-        self.labelVisuClassif.setText("")
-        self.labelVisuClassif.setAlignment(QtCore.Qt.AlignCenter)
-        self.labelVisuClassif.setObjectName("labelVisuClassif")
-        self.horizontalLayout_2.addWidget(self.labelVisuClassif, 0, QtCore.Qt.AlignHCenter|QtCore.Qt.AlignVCenter)
-        self.gridLayout.addWidget(self.FilterBox, 2, 0, 1, 1, QtCore.Qt.AlignHCenter)
         self.horizontalLayout_4 = QtWidgets.QHBoxLayout()
         self.horizontalLayout_4.setContentsMargins(-1, -1, 50, -1)
         self.horizontalLayout_4.setObjectName("horizontalLayout_4")
@@ -198,6 +118,95 @@ class Ui_MainWindow(object):
         self.label_LastSaved.setObjectName("label_LastSaved")
         self.horizontalLayout_4.addWidget(self.label_LastSaved)
         self.gridLayout.addLayout(self.horizontalLayout_4, 0, 0, 1, 1)
+        self.FilterBox = QtWidgets.QGroupBox(self.gridLayoutWidget)
+        self.FilterBox.setEnabled(True)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Fixed, QtWidgets.QSizePolicy.Minimum)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.FilterBox.sizePolicy().hasHeightForWidth())
+        self.FilterBox.setSizePolicy(sizePolicy)
+        self.FilterBox.setMinimumSize(QtCore.QSize(635, 130))
+        self.FilterBox.setMaximumSize(QtCore.QSize(650, 170))
+        font = QtGui.QFont()
+        font.setBold(True)
+        font.setWeight(75)
+        self.FilterBox.setFont(font)
+        self.FilterBox.setAutoFillBackground(False)
+        self.FilterBox.setFlat(False)
+        self.FilterBox.setCheckable(False)
+        self.FilterBox.setObjectName("FilterBox")
+        self.layoutWidget = QtWidgets.QWidget(self.FilterBox)
+        self.layoutWidget.setGeometry(QtCore.QRect(12, 32, 631, 94))
+        self.layoutWidget.setObjectName("layoutWidget")
+        self.horizontalLayout_2 = QtWidgets.QHBoxLayout(self.layoutWidget)
+        self.horizontalLayout_2.setContentsMargins(0, 0, 0, 0)
+        self.horizontalLayout_2.setObjectName("horizontalLayout_2")
+        self.verticalLayout = QtWidgets.QVBoxLayout()
+        self.verticalLayout.setObjectName("verticalLayout")
+        self.radioButton_All = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_All.setChecked(True)
+        self.radioButton_All.setObjectName("radioButton_All")
+        self.verticalLayout.addWidget(self.radioButton_All)
+        self.radioButton_Crystal = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Crystal.setObjectName("radioButton_Crystal")
+        self.verticalLayout.addWidget(self.radioButton_Crystal)
+        self.radioButton_Subwella = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Subwella.setObjectName("radioButton_Subwella")
+        self.verticalLayout.addWidget(self.radioButton_Subwella)
+        self.horizontalLayout_2.addLayout(self.verticalLayout)
+        self.verticalLayout_2 = QtWidgets.QVBoxLayout()
+        self.verticalLayout_2.setObjectName("verticalLayout_2")
+        self.radioButton_Clear = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Clear.setObjectName("radioButton_Clear")
+        self.verticalLayout_2.addWidget(self.radioButton_Clear)
+        self.radioButton_Other = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Other.setObjectName("radioButton_Other")
+        self.verticalLayout_2.addWidget(self.radioButton_Other)
+        self.radioButton_Subwellb = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Subwellb.setObjectName("radioButton_Subwellb")
+        self.verticalLayout_2.addWidget(self.radioButton_Subwellb)
+        self.horizontalLayout_2.addLayout(self.verticalLayout_2)
+        self.verticalLayout_3 = QtWidgets.QVBoxLayout()
+        self.verticalLayout_3.setObjectName("verticalLayout_3")
+        self.radioButton_Precipitate = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Precipitate.setObjectName("radioButton_Precipitate")
+        self.verticalLayout_3.addWidget(self.radioButton_Precipitate)
+        self.radioButton_PhaseSep = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_PhaseSep.setObjectName("radioButton_PhaseSep")
+        self.verticalLayout_3.addWidget(self.radioButton_PhaseSep)
+        self.radioButton_Subwellc = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Subwellc.setObjectName("radioButton_Subwellc")
+        self.verticalLayout_3.addWidget(self.radioButton_Subwellc)
+        self.horizontalLayout_2.addLayout(self.verticalLayout_3)
+        self.verticalLayout_4 = QtWidgets.QVBoxLayout()
+        self.verticalLayout_4.setObjectName("verticalLayout_4")
+        self.radioButton_Unsorted = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_Unsorted.setObjectName("radioButton_Unsorted")
+        self.verticalLayout_4.addWidget(self.radioButton_Unsorted)
+        self.radioButton_HasNotes = QtWidgets.QRadioButton(self.layoutWidget)
+        self.radioButton_HasNotes.setObjectName("radioButton_HasNotes")
+        self.verticalLayout_4.addWidget(self.radioButton_HasNotes)
+        self.horizontalLayout_2.addLayout(self.verticalLayout_4)
+        self.labelVisuClassif = QtWidgets.QLabel(self.layoutWidget)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.MinimumExpanding, QtWidgets.QSizePolicy.Fixed)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.labelVisuClassif.sizePolicy().hasHeightForWidth())
+        self.labelVisuClassif.setSizePolicy(sizePolicy)
+        self.labelVisuClassif.setMinimumSize(QtCore.QSize(143, 50))
+        self.labelVisuClassif.setMaximumSize(QtCore.QSize(140, 50))
+        font = QtGui.QFont()
+        font.setPointSize(18)
+        font.setBold(True)
+        font.setWeight(75)
+        self.labelVisuClassif.setFont(font)
+        self.labelVisuClassif.setFrameShape(QtWidgets.QFrame.Box)
+        self.labelVisuClassif.setFrameShadow(QtWidgets.QFrame.Sunken)
+        self.labelVisuClassif.setText("")
+        self.labelVisuClassif.setAlignment(QtCore.Qt.AlignCenter)
+        self.labelVisuClassif.setObjectName("labelVisuClassif")
+        self.horizontalLayout_2.addWidget(self.labelVisuClassif, 0, QtCore.Qt.AlignHCenter|QtCore.Qt.AlignVCenter)
+        self.gridLayout.addWidget(self.FilterBox, 2, 0, 1, 1)
         self.gridLayoutWidget_2 = QtWidgets.QWidget(self.verticalFrame)
         self.gridLayoutWidget_2.setGeometry(QtCore.QRect(20, 650, 1541, 280))
         self.gridLayoutWidget_2.setObjectName("gridLayoutWidget_2")
@@ -566,16 +575,19 @@ class Ui_MainWindow(object):
         self.PlateName.setText(_translate("MainWindow", "----"))
         self.label.setText(_translate("MainWindow", "Days since setup:"))
         self.label_NDays.setText(_translate("MainWindow", "----"))
+        self.label_ProjectDetails.setText(_translate("MainWindow", "Project Details"))
         self.FilterBox.setTitle(_translate("MainWindow", "Filter"))
         self.radioButton_All.setText(_translate("MainWindow", "All"))
         self.radioButton_Crystal.setText(_translate("MainWindow", "Crystal"))
+        self.radioButton_Subwella.setText(_translate("MainWindow", "Subwell a"))
         self.radioButton_Clear.setText(_translate("MainWindow", "Clear"))
         self.radioButton_Other.setText(_translate("MainWindow", "Other"))
+        self.radioButton_Subwellb.setText(_translate("MainWindow", "Subwell b"))
         self.radioButton_Precipitate.setText(_translate("MainWindow", "Precipitate"))
         self.radioButton_PhaseSep.setText(_translate("MainWindow", "Phase Separation"))
+        self.radioButton_Subwellc.setText(_translate("MainWindow", "Subwell c"))
         self.radioButton_Unsorted.setText(_translate("MainWindow", "Unsorted"))
         self.radioButton_HasNotes.setText(_translate("MainWindow", "With Notes"))
-        self.label_ProjectDetails.setText(_translate("MainWindow", "Project Details"))
         self.label_2.setText(_translate("MainWindow", "Notes"))
         self.label_4.setText(_translate("MainWindow", "Drop Score"))
         self.label_Timeline.setText(_translate("MainWindow", "Timeline for well :"))
